--- a/team.html
+++ b/team.html
@@ -331,6 +331,23 @@
           </a>
         </div>
       </div>
+
+      <div class="team-member">
+        <div class="member-image-container">
+          <img src="james.jpg" alt="James Cunningham" class="member-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+          <div class="member-image-placeholder" style="display: none;">JC</div>
+        </div>
+        <h2 class="member-name">James Cunningham</h2>
+        <p class="member-role">Growth</p>
+        <p class="member-bio">
+          A freshman at Santa Clara University, James brings valuable experience in SaaS product development from his work with AI startups. He focuses on driving user acquisition and engagement strategies for LectureLink.
+        </p>
+        <div class="member-links">
+          <a href="https://www.linkedin.com/in/james-cunningham-025133305/" target="_blank" class="linkedin-link">
+            LinkedIn
+          </a>
+        </div>
+      </div>
     </div>
   </main>
   
