--- a/team.html
+++ b/team.html
@@ -304,9 +304,9 @@
           <div class="member-image-placeholder" style="display: none;">SR</div>
         </div>
         <h2 class="member-name">Sumner Roberts</h2>
-        <p class="member-role">Co-Founder</p>
+        <p class="member-role">Ideation</p>
         <p class="member-bio">
-          With experience on presidential campaigns and a semester working in the White House, Sumner spearheads LectureLink's growth and marketing initiatives.
+          With experience on presidential campaigns and a semester working in the White House, Sumner spearheads LectureLink's ideation and marketing initiatives.
         </p>
         <div class="member-links">
           <a href="https://www.linkedin.com/in/sumnerroberts/" target="_blank" class="linkedin-link">
@@ -321,7 +321,7 @@
           <div class="member-image-placeholder" style="display: none;">IH</div>
         </div>
         <h2 class="member-name">India Houghton</h2>
-        <p class="member-role">Chief Design Officer</p>
+        <p class="member-role">Design</p>
         <p class="member-bio">
           With a degree in Science, Technology, and Society from Stanford University, India leverages current market trends to bring cutting-edge designs to LectureLink. India currently plays on the University of Florida Women's Tennis Team.
         </p>
