--- a/index.html
+++ b/index.html
@@ -143,17 +143,19 @@
     }
 
     .app-preview {
-      margin-top: 1.5rem;
       perspective: 1200px;
       position: relative;
       z-index: 10;
+      padding-bottom: -200px;
     }
 
     .app-preview img {
       width: 100%;
       max-width: 350px;
       height: auto;
-      transform: rotateX(25deg) rotateY(0deg) translateZ(0);
+      margin-top: -80px;
+      margin-bottom: -280px;
+      transform: rotateX(60deg) rotateY(0deg) translateZ(0);
     }
     
     footer {
