--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
     .feature-icon {
       width: 48px;
       height: 48px;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: #8f0e14;
       border-radius: 12px;
       display: flex;
       align-items: center;
@@ -242,7 +242,7 @@
     }
 
     .vision-section {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: #8f0e14;
       color: white;
       padding: 6rem 2rem;
       text-align: center;
