--- a/team.html
+++ b/team.html
@@ -154,7 +154,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: #8f0e14;
       color: white;
       font-size: 3rem;
       font-weight: 600;
