--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Connect with your peers from university and online courses today. Share notes, rate exams, make study groups, and more. Download now on the App Store.">
   <title>LectureLink</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
