--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Share notes, rate exams, make study groups, and more. All of your data is protect with end to end encryption and the latest security tools. We never sell user data.">
   <title>About - LectureLink</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
