--- a/opportunities.html
+++ b/opportunities.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Join the LectureLink team today! We are hiring full time, part time, and internship roles across the board right now. Join us and push university communities to the next level.">
   <title>Opportunities - LectureLink</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
