--- a/about.html
+++ b/about.html
@@ -299,6 +299,15 @@
     }
 
     @media (max-width: 768px) {
+      nav {
+        padding: 1rem 1.5rem;
+      }
+
+      .logo {
+        height: 45px;
+        margin-right: 0.5rem;
+      }
+
       .nav-links {
         gap: 1rem;
       }
