--- a/team.html
+++ b/team.html
@@ -239,10 +239,19 @@
     }
     
     @media (max-width: 768px) {
+      nav {
+        padding: 1rem 1.5rem;
+      }
+
+      .logo {
+        height: 45px;
+        margin-right: 0.5rem;
+      }
+
       .nav-links {
         gap: 1rem;
       }
-      
+
       .nav-links a {
         font-size: 0.9rem;
       }
@@ -293,7 +302,7 @@
         <h2 class="member-name">Henry Houghton</h2>
         <p class="member-role">Founder & CEO</p>
         <p class="member-bio">
-          With years of experience writing scalable, high-performance code and a degree from Cornell University in Data Science, Henry leads the development and business operations of LectureLink.
+          With years of experience writing scalable, high-performance code and a degree from Cornell University in Data Science, Henry leads the technical and business operations of LectureLink.
         </p>
         <div class="member-links">
           <a href="https://www.linkedin.com/in/henry-houghton/" target="_blank" class="linkedin-link">
